--- a/Hesap/Giris.cshtml
+++ b/Hesap/Giris.cshtml
@@ -30,11 +30,14 @@ if (WebSecurity.IsAuthenticated)
              hataVar=true;
              mesajKullaniciAdiveyaParolaBos="Kullanıcı adı veya parola boş bırakılamaz";
          }
-       if (!ReCaptcha.Validate("6LdM5hwTAAAAAAAjS6NQWI7uVXlCddNNhSJ__Slu")) {
+        string EncodedResponse = Request.Form["g-Recaptcha-Response"];
+        bool IsCaptchaValid = (ReCaptchaClass.Validate(EncodedResponse) == "True" ? true : false);
+
+        if (!IsCaptchaValid) {
             hataVar=true;
             mesajGuvenlikKoduHatasi="Güvenlik kodu hatalı girildi";
+        }
 
-         }
 
 
        var db=Database.Open("fb1ae");
@@ -118,7 +121,9 @@ if (WebSecurity.IsAuthenticated)
                                                            
                                                             
                                                             <div class="form-group">
-                                                                @ReCaptcha.GetHtml("6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9", theme: "white",language:"tr")
+                                                                 <div class="g-recaptcha" data-sitekey="6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9"></div>
+                                                                 <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl=tr"></script>
+                                                                
                                                             </div>
                                                             <button type="submit" class="btn btn-primary btn-block">Oturum Aç</button>
                                                             <a href="@Href("~/Hesap/ParolamiUnuttum")" class="btn btn-primary btn-block">@Resources.Resource.lblParolamiUnuttum</a>
