--- a/Hesap/Giris.cshtml
+++ b/Hesap/Giris.cshtml
@@ -121,7 +121,7 @@ if (WebSecurity.IsAuthenticated)
                                                            
                                                             
                                                             <div class="form-group">
-                                                                 <div class="g-recaptcha" data-sitekey="6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9"></div>
+                                                                 <div class="g-recaptcha" data-sitekey="6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9" data-size="normal"></div>
                                                                  <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl=tr"></script>
                                                                 
                                                             </div>
