--- a/Hesap/YeniEgitmen.cshtml
+++ b/Hesap/YeniEgitmen.cshtml
@@ -38,6 +38,7 @@
         parola=Request.Form["txtParola"].Trim();
         reParola=Request["txtReParola"].Trim();
         dogrulamaKodu=Request.Form["txtDogrulamaKodu"].Trim();
+        string EncodedResponse = Request.Form["g-Recaptcha-Response"];
 
         if (string.IsNullOrEmpty(ad) || string.IsNullOrEmpty(soyad) || string.IsNullOrEmpty(ePosta) || string.IsNullOrEmpty(parola) || string.IsNullOrEmpty(dogrulamaKodu))         {
              hataVar=true;
@@ -64,11 +65,12 @@
 
          if (hataVar==false)
          {
-              if (!ReCaptcha.Validate("6LdM5hwTAAAAAAAjS6NQWI7uVXlCddNNhSJ__Slu")) 
-                  {
-                    hataVar=true;
-                    mesajGuvenlikKoduHatali="Güvenlik kodu hatalı girildi";
-                  }
+            bool IsCaptchaValid = (ReCaptchaClass.Validate(EncodedResponse) == "True" ? true : false);
+
+            if (!IsCaptchaValid) {
+                hataVar=true;
+                mesajGuvenlikKoduHatali="Güvenlik kodu hatalı girildi";
+            }
          }
 
          if (parola!=reParola)
@@ -215,7 +217,8 @@
                                                            
                                                             
                                                             <div class="form-group">
-                                                                @ReCaptcha.GetHtml("6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9", theme: "white",language:"tr")
+                                                                 <div class="g-recaptcha" data-sitekey="6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9" data-size="normal"></div>
+                                                                 <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl=tr"></script>
                                                             </div>
                                                             <button type="submit" class="btn btn-primary">@Resources.Resource.lblHesabiOlustur</button>
                                                         </form>
