--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -92,7 +92,7 @@
 }
 
 <div class="row"> 
-    <div class="col-lg-12">        @if (abonelikKalanGun==0 && roller.Contains("Ogretici"))        {            <p class="alert alert-danger">Aboneliğinizin Süresi Doldu</p>        }
+    <div class="col-lg-12"> 
                             <div class="dropdown">
 
                         
