--- a/Shared/_LayoutYeni.cshtml
+++ b/Shared/_LayoutYeni.cshtml
@@ -549,7 +549,7 @@
 
             <!-- Page Sidebar -->
 
-            <div class="page-sidebar menu-compact" id="sidebar">
+            <div class="page-sidebar" id="sidebar">
 
                 <!-- Page Sidebar Header-->
 
