--- a/Hesap/Giris.cshtml
+++ b/Hesap/Giris.cshtml
@@ -126,7 +126,7 @@ if (WebSecurity.IsAuthenticated)
                                                                 
                                                             </div>
                                                             <button type="submit" class="btn btn-primary btn-block">Oturum Aç</button>
-                                                            <a href="@Href("~/Hesap/ParolamiUnuttum")" class="btn btn-primary btn-block">@Resources.Resource.lblParolamiUnuttum</a>
+                                                            <a href="@Href("~/Hesap/ParolamiUnuttum")">@Resources.Resource.lblParolamiUnuttum</a>
                                                         </form>
                                                     </div>
                                                 </div>
