--- a/Hesap/Yeni.cshtml
+++ b/Hesap/Yeni.cshtml
@@ -184,7 +184,7 @@
                                                            
                                                             
                                                             <div class="form-group">
-                                                                 <div class="g-recaptcha" data-sitekey="6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9" data-size="normal"></div>
+                                                                 <div class="g-recaptcha" data-sitekey="6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9" data-size="normal" style="transform:scale(0.88);-webkit-transform:scale(0.88);transform-origin:0 0;-webkit-transform-origin:0 0;"></div>
                                                                  <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl=tr"></script>
                                                             </div>
                                                             <button type="submit" class="btn btn-blue">Hesabı Oluştur</button>
