--- a/Web/Default.cshtml
+++ b/Web/Default.cshtml
@@ -104,7 +104,7 @@
 					<div class="info-box info-box4">
 						<div class="img"><i class="fa fa-share-alt"></i></div>
 						<div class="info">
-							<h2 class="hd">Ders Materyallerine 7/24 Erişim</h2>
+							<h2 class="hd">Ders Materyallerine 7-24 Erişim</h2>
 							<p class="sub-txt">BulutDers ile öğrenciler ve eğitmenler, ders materyallerine herhangi bir yerden ve herhangi bir zamanda yüksek hızla erişim sağlarlar.</p>
 						</div>
 					</div><!-- /.info-box -->
